[metadata]
name = awstools
version = 0.0.1
summary = High level tools to manage an AWS infrastructure
author = Pior Bastida
author_email = pior@pbastida.net

requires-dist =
    argh
    boto

classifiers =
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python

[files]
packages = awstools
scripts = scripts/cfn
