[metadata]
name = awstools
version = 0.0.4
summary = High level tools to manage an AWS infrastructure
description-file = README.rst
author = Pior Bastida
author_email = pior@pbastida.net

requires-dist =
    argh
    PyYaml
    boto==2.5.2

classifiers =
    Intended Audience :: System Administrators
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2.7

[files]
packages =
    awstools
    awstools.tests
scripts = scripts/cfn

[nosetests]
where = awstools
match = ^test
nocapture = 1
cover-package = awstools
cover-inclusive = 1
with-xcoverage = 1
with-xunit = 1
cover-erase = 1
verbosity = 3
with-id = 1
